--- a/retry-endpoint/VirtualServiceRetry.yaml
+++ b/retry-endpoint/VirtualServiceRetry.yaml
@@ -8,21 +8,31 @@ spec:
     - retry-endpoint
   http:
     - match:
-        - uri:
-            prefix: /abc
-      name: test1
+        - method:
+            exact: PUT
+          uri:
+            exact: /abc
+      name: retry-abc-put-409
       retries:
         attempts: 1
         perTryTimeout: 1s
-        retryOn: 'retriable-4xx'
+        retryOn: retriable-4xx
       route:
         - destination:
             host: retry-endpoint
-    - name: test2
+    - match:
+        - method:
+            exact: GET
+      name: retry-all-get
       retries:
         attempts: 2
         perTryTimeout: 2s
         retryOn: '5xx,reset'
+      route:
+        - destination:
+            host: retry-endpoint
+      timeout: 5s
+    - name: other
       route:
         - destination:
             host: retry-endpoint
