--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,13 @@
         <version>2.3.0.RELEASE</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 </project>
