--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
+        <module>healthcheck-app</module>
         <module>retry-intermediary</module>
         <module>retry-endpoint</module>
     </modules>
