Add mirroring demo

--- a/mirroring-app/Service.yml
+++ b/mirroring-app/Service.yml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: healthcheck-app
+  name: mirroring-app
   namespace: retry-test-project
+  labels:
+    app: mirroring-app
 spec:
   selector:
-    app: healthcheck-app
+    app: mirroring-app
   ports:
     - protocol: TCP
       port: 80
